fix: default pages overflow and minor style fix

--- a/components/interactables/Button/Button.less
+++ b/components/interactables/Button/Button.less
@@ -4,7 +4,7 @@
   overflow: hidden;
   line-height: unset;
   transition: all @animation-speed ease-in;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   position: relative;
   border-radius: @corner-rounding;
 
